envoy/envoy-01.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/v1/statement"
                          route:
                            cluster: trino_cluster
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        my_provider:
                          issuer: "https://my-issuer.example.com"
                          forward: true
                          from_headers:
                            - name: Authorization
                              value_prefix: "Bearer "
                          jwks_uri: "https://my-issuer.example.com/.well-known/jwks.json"
                      rules:
                        - match:
                            prefix: "/v1/statement"
                          requires:
                            provider_name: "my_provider"
                  - name: envoy.filters.http.router

  clusters:
    - name: trino_cluster
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: trino_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: trino
                      port_value: 8080
