envoy/envoy-02.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/v1/statement"
                          route:
                            cluster: trino_cluster
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        issuer1_provider:
                          issuer: "https://issuer1.example.com"
                          forward: true
                          from_headers:
                            - name: Authorization
                              value_prefix: "Bearer "
                          remote_jwks:
                            http_uri:
                              uri: https://issuer1.example.com/.well-known/jwks.json
                              cluster: issuer1_jwks_cluster
                              timeout: 1s
                            cache_duration:
                              seconds: 300
                          payload_in_metadata: issuer1_payload
                        issuer2_provider:
                          issuer: "https://issuer2.example.com"
                          forward: true
                          from_headers:
                            - name: Authorization
                              value_prefix: "Bearer "
                          remote_jwks:
                            http_uri:
                              uri: https://issuer2.example.com/.well-known/jwks.json
                              cluster: issuer2_jwks_cluster
                              timeout: 1s
                            cache_duration:
                              seconds: 300
                          payload_in_metadata: issuer2_payload
                      rules:
                        - match:
                            prefix: "/v1/statement"
                          requires:
                            requires_any:
                              requirements:
                                - provider_name: issuer1_provider
                                - provider_name: issuer2_provider
                  - name: envoy.filters.http.router

  clusters:
    - name: trino_cluster
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: trino_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: trino
                      port_value: 8080
    - name: issuer1_jwks_cluster
      connect_timeout: 1s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: issuer1_jwks_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: issuer1.example.com
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
    - name: issuer2_jwks_cluster
      connect_timeout: 1s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: issuer2_jwks_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: issuer2.example.com
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
